fixing horizontal scroll error

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -3,7 +3,9 @@
 @tailwind utilities;
 
 body {
-  font-family: 'PT Sans', sans-serif;
+  font-family: "PT Sans", sans-serif;
+  max-width: 100vw;
+  overflow-x: hidden;
 }
 
 @layer base {
